# mipt_ml_hw05_6sem

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.github/: pull_request_template.md
.github/wokrflows/: .github-ci.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_train_py.html  z_dd52281f56f5d51f_face_recognition_py.html  z_e5ccf62099f28249_data_loader_py.html  z_f1b38b22aeb65474_device_py.html  z_f1b38b22aeb65474_evaluator_py.html  z_f1b38b22aeb65474_optimizer_py.html  z_f1b38b22aeb65474_scheduler_py.html  z_f1b38b22aeb65474_verification_py.html
notebooks/: demonstration_of_model.ipynb  inference.py
src/: config.py  main.py  train.py
src/data/: data_loader.py
src/model/: face_recognition.py
src/utils/: device.py  evaluator.py  logger.py  optimizer.py  scheduler.py  verification.py
tests/: test_main.py  test_train.py
tests/data/: test_data_loader.py
tests/model/: test_face_recognition.py
tests/utils/: test_device.py  test_evaluator.py  test_optimizer.py  test_scheduler.py  test_verification.py
